--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "mongoose": "^6.3.4",
     "shortid": "^2.2.16",
     "winston": "^3.7.2"
   },
