--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
     "express-winston": "^4.2.0",
     "mongoose": "^6.3.4",
     "shortid": "^2.2.16",
