--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "shortid": "^2.2.16",
     "winston": "^3.7.2"
@@ -25,6 +27,7 @@
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/shortid": "^0.0.29",
     "source-map-support": "^0.5.21",
     "tslint": "^6.1.3",
