--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
     "debug": "SET DEBUG=* && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'test/**/*.test.ts' --unhandled-rejections=strict",
+    "test-debug": "export DEBUG=* && npm test"
   },
   "author": "",
   "license": "ISC",
@@ -24,12 +25,19 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mocha": "^9.1.1",
     "@types/shortid": "^0.0.29",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.2.3",
+    "ts-node": "^10.8.0",
     "tslint": "^6.1.3",
     "typescript": "^4.6.4"
   }
